--- a/elasticsearch-vietname-docker-compose.yaml
+++ b/elasticsearch-vietname-docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - xpack.security.enabled=false
       - discovery.type=single-node
       - ELASTIC_PASSWORD=elastic
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
     networks:
       - es-net
     ports:
